src/tests/snapshots/niri__tests__window_opening__check_target_output_and_workspace@ws1-out1-fsF-wfsB1.snap
---
source: src/tests/window_opening.rs
description: "open on workspace: ws-1\nopen on output: headless-1\nopen fullscreen: false\nwant fullscreen: B1"
expression: snapshot
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 616 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
